examples/expected/check_invalid_unknown_function.txt
error[E1003]: undefined function 'foo'
  --> examples/invalid_unknown_function.tp:2:3
   |
 2 |   foo(1)
   |   ^^^^^^
